@@ -5,6 +5,7 @@ Date: ???
     - Fixed startup error with Mad Clown's mods enabled
     - Hid gunmetal item, recipes, and tech
     - Fixed that basic steel smelting was half price
+    - Removed fuel value from diesel so it would not show in helper mods
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.6
 Date: 14.08.2021
